# raven

./: .gitignore  main.py  pyproject.toml
configs/: base.yml  optimizer.yml  training.yml
configs/model/: qwen2.yml
src/raven/base/: __init__.py  context.py
src/raven/base/configs/: __init__.py  loader.py  tree.py
src/raven/data/: dataloader.py  tokenizer.py
src/raven/data/datasets/: pretrain.py
